[tool.poetry]
name = "pytatsu"
version = "0.1.3"
description = "A Python library/CLI tool for requesting and saving SHSH blobs from Apple's Tatsu signing server API."
authors = ["Cryptiiiic <liamwqs@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Cryptiiiic/Tatsu"

packages = [
    { include = "pytatsu" },
    { include = "pytatsu/**/*.py" },
]

[tool.poetry.scripts]
tatsu = "pytatsu.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
pybmtool = "^0.1.4"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Cryptiiiic/Tatsu/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
